# Zakaz_Dashboard

./: .env  001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  018_TEST_REPORT.md  019_FINAL_VERIFICATION_REPORT.md  019_PRODUCTION_TESTING_PLAN.md  019_PRODUCTION_TESTING_REPORT.md  019_QUICK_TASK.md  019_VERIFICATION_TASK.md  020_QTICKETS_PRODUCTION_TESTING.md  020_QTICKETS_PRODUCTION_TESTING_REPORT.md  021.md  021_EXECUTION_REPORT.md  021_UBUNTU_DEPLOYMENT_GUIDE.md  022_MIGRATION_GUIDE.md  023_DATALENS_SETUP_GUIDE.md  024_COMPREHENSIVE_TROUBLESHOOTING_GUIDE.md  025_COMPLETE_DEPLOYMENT_PACKAGE.md  026.md  027_CUSTOMER_DEPLOYMENT_FIX.md  028_AUTOMATION_SCRIPTS.md  029_PRE_DEPLOYMENT_CHECKLIST.md  030_SPECIFIC_TROUBLESHOOTING.md  031_FINAL_DEPLOYMENT_GUIDE.md  (+31 more)
.claude/: settings.json
For qtickets test/: Qtickets_API_Postman_Collection.json  README_INSTRUCTION.md  qtickets_api_test_requests.md  qtickets_test_curl.sh
dashboard-mvp/: .env.sample  .gitignore  (+35 more)
dashboard-mvp/vk-python/: .env.sample  README.md  pyproject.toml
dashboard-mvp/vk-python/src/vk_ads_pipeline/: __init__.py  client.py  config.py  main.py  pipeline.py  transforms.py
dashboard-mvp/vk-python/src/vk_ads_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard-mvp/vk-python/src/vk_ads_pipeline/sink/: __init__.py  clickhouse_sink.py
dashboard-mvp/vk-python/src/vk_ads_pipeline/transform/: __init__.py  normalize.py
dashboard-mvp/vk-python/tests/: test_config.py  test_transforms.py
(+453 files in other folders)
